--- a/src/index.css
+++ b/src/index.css
@@ -12,14 +12,18 @@ code {
     monospace;
 }
 
+.f-about {
+  text-align: left;
+}
+
 .f-card {
-  margin: 20px;
+  margin: 10px;
 }
 
 .f-card-img {
   border-radius: 10px;
-  width: 380px;
-  height: 460px;
+  width: 330px;
+  height: 400px;
   box-shadow: 0px 0px 3px 1px #ccc;
 }
 
@@ -36,4 +40,8 @@ code {
 .f-card-subtitle {
   font-size: 16px;
   margin: 0px;
+}
+
+.f-footer {
+  background-color: dimgrey;
 }
